# cpp_template

./: .gitignore  CMakeLists.txt  README.md
auto/: build.sh  format.sh  lint.sh  run.sh  test.sh
include/superxc/: placeholder.h
include/superxcgm/: placeholder.h
src/: main.cc  placeholder.cc
test/: placeholder_test.cc
